--- a/sass/modules/order/confirm.scss
+++ b/sass/modules/order/confirm.scss
@@ -297,6 +297,9 @@
             font-size: 30px;
             font-weight: 700;
         }
+        .cancel-color{
+            color: $cgray;
+        }
         .print{
             display: block;
             margin-top: 50px;
@@ -315,7 +318,7 @@
 .order-progress{
     margin-left: 58px;
     margin-top: 30px;
-    p{
+    .cgray{
         color: $gray-light;
         font-size: 13px;
     }
@@ -327,7 +330,19 @@
             padding: 0 25px;
             color: #3c3c3c;
             font-size: $font-size-m;
-                    text-align: center;
+            text-align: center;
+            position: relative;
+            &.dot-item:after{
+                    content: "…………";
+                    width: 50px;
+                    display: table;
+                    position: absolute;
+                    top: 8px;
+                    color: #fc9b67;
+                    font-size: 24px;
+                    font-weight: 700;
+                    left: -50px;
+            }
             .iconfont{
                 display: block;
                 font-size: 50px;
@@ -353,6 +368,14 @@
            }
         }
     }
+    .cancel{
+        .pro-state .iconfont, .pro-state.dot-item:after{
+            color: $cgray;
+        }
+        .pro-state.active .iconfont{
+            background: $cgray;
+        }
+    }
 }
 @mixin border-radius($borderColor, $borderW){
     border: 1px solid $borderColor;
@@ -374,4 +397,61 @@
     &.cancel-order{
         right: 230px;
     }
+}
+.btn-shadow{
+	-webkit-box-shadow: 3px 4px 5px rgba(0,0,0,.21);
+	-moz-box-shadow: 3px 4px 5px rgba(0,0,0,.21);
+	box-shadow: 3px 4px 5px rgba(0,0,0,.21);
+}
+.dropbox{
+    border: 1px solid $byellow;
+    text-align: center;
+    position: absolute;
+    top: 80px;
+    color: $byellow;
+    width: 200px;
+	height: 187px;
+    background: #fff;
+    z-index: 10;
+    padding: 0 18px;
+    right: -14px;
+    span{
+        font-weight: 700;
+        margin-top: 30px;
+        margin-bottom: 5px;
+        display: block;
+    }
+    p{
+         color: $byellow;
+         line-height: 20px;
+         line-height: 32px;
+    }
+}
+.triangle-down{
+    &:before, &:after{
+        position: absolute;
+        content: "";
+        display: block;
+        border-style: solid;
+        z-index: 10;
+    }
+    &:before{
+        border-color: transparent transparent #ff6e1f;
+        left: 26px;
+        top: -20px;
+        border-width: 10px;
+    }
+    &:after{
+        border-width: 9px;        
+        border-color: transparent transparent #fff;
+        left: 27px;
+        top: -17px;
+    }
+}
+.cyellow{
+    border-color: $byellow;
+    color: $byellow;
+}
+.leave-message{
+    color: #e90000;
 }
