--- a/sass/modules/order/confirm.scss
+++ b/sass/modules/order/confirm.scss
@@ -314,6 +314,26 @@
             }
         }
     }
+    .dropbox{
+        border: 1px solid $byellow;
+        top: 80px;
+        width: 200px;
+        height: 187px;
+        padding: 0 18px;
+        right: -14px;
+        span{
+            font-weight: 700;
+            margin-top: 30px;
+            margin-bottom: 5px;
+            display: block;
+            color: $byellow;
+        }
+        p{
+            color: $byellow;
+            line-height: 20px;
+            line-height: 32px;
+        }
+    }
 }
 .order-progress{
     margin-left: 58px;
@@ -403,49 +423,14 @@
 	-moz-box-shadow: 3px 4px 5px rgba(0,0,0,.21);
 	box-shadow: 3px 4px 5px rgba(0,0,0,.21);
 }
-.dropbox{
-    border: 1px solid $byellow;
-    text-align: center;
-    position: absolute;
-    top: 80px;
-    color: $byellow;
-    width: 200px;
-	height: 187px;
-    background: #fff;
-    z-index: 10;
-    padding: 0 18px;
-    right: -14px;
-    span{
-        font-weight: 700;
-        margin-top: 30px;
-        margin-bottom: 5px;
-        display: block;
-    }
-    p{
-         color: $byellow;
-         line-height: 20px;
-         line-height: 32px;
-    }
-}
+
+
 .triangle-down{
-    &:before, &:after{
-        position: absolute;
-        content: "";
-        display: block;
-        border-style: solid;
-        z-index: 10;
-    }
     &:before{
-        border-color: transparent transparent #ff6e1f;
-        left: 26px;
-        top: -20px;
-        border-width: 10px;
+        @include triangle(26px, -20px, 10px, #ff6e1f);
     }
     &:after{
-        border-width: 9px;        
-        border-color: transparent transparent #fff;
-        left: 27px;
-        top: -17px;
+        @include triangle(27px, -17px, 9px, #fff);
     }
 }
 .cyellow{
