--- a/sass/modules/supplierDetail/shopCart.scss
+++ b/sass/modules/supplierDetail/shopCart.scss
@@ -79,6 +79,7 @@
     height: 50px;
     padding: 0 12px;
     font-size: 13px;
+    width: 100%;
     .cell{
         display: table-cell;
         vertical-align: middle;
