--- a/sass/modules/yellowTop.scss
+++ b/sass/modules/yellowTop.scss
@@ -2,6 +2,7 @@
     line-height: 58px;
     height: 58px;
     background: $byellow;
+    overflow: hidden;
     .topbar-item{
         float: left;
         color: #fff;
