--- a/sass/pages/orderList.scss
+++ b/sass/pages/orderList.scss
@@ -56,6 +56,7 @@
         .item{
             margin-bottom: 8px;
             line-height: 36px;
+            position: relative;
             .input{
                 height: 36px;
                 width: 178px;
@@ -91,7 +92,20 @@
                     .icon-selected{
                         color: $byellow;
                     }
-                }
+            }
+            .search-btn{
+                background: $byellow;
+                cursor: pointer;
+                color: #fff;
+                height: 28px;
+                line-height: 28px;
+                text-align: center;
+                width: 60px;
+                position: absolute;
+                right: 44px;
+                border: 0;
+                
+            }
         }
     }
 }
@@ -170,6 +184,7 @@
             height: 48px;
             line-height: 48px;
             color: $cgray;
+            border-bottom: 1px solid #ebebeb;
              img {
                 width: 32px;
                 height: 32px;
@@ -202,6 +217,7 @@
                 line-height: 50px;
                 margin-right: 35px;
                 span{
+                    margin-left: 4px;
                     &:after{
                         content: "";
                         width: 2px;
