--- a/sass/modules/common.scss
+++ b/sass/modules/common.scss
@@ -18,11 +18,11 @@ $border-f1: #f1f1f1;
 
 @font-face {
   font-family: 'iconfont';  /* project id 156314 */
-  src: url('http://at.alicdn.com/t/font_m64avvmipt1q0k9.eot');
-  src: url('http://at.alicdn.com/t/font_m64avvmipt1q0k9.eot?#iefix') format('embedded-opentype'),
-  url('http://at.alicdn.com/t/font_m64avvmipt1q0k9.woff') format('woff'),
-  url('http://at.alicdn.com/t/font_m64avvmipt1q0k9.ttf') format('truetype'),
-  url('http://at.alicdn.com/t/font_m64avvmipt1q0k9.svg#iconfont') format('svg');
+  src: url('http://at.alicdn.com/t/font_0xnc6rdjr05p14i.eot');
+  src: url('http://at.alicdn.com/t/font_0xnc6rdjr05p14i.eot?#iefix') format('embedded-opentype'),
+  url('http://at.alicdn.com/t/font_0xnc6rdjr05p14i.woff') format('woff'),
+  url('http://at.alicdn.com/t/font_0xnc6rdjr05p14i.ttf') format('truetype'),
+  url('http://at.alicdn.com/t/font_0xnc6rdjr05p14i.svg#iconfont') format('svg');
 }
 .iconfont{
 	font-family: 'iconfont'!important;
@@ -31,6 +31,7 @@ $border-f1: #f1f1f1;
     -webkit-font-smoothing: antialiased;
     -webkit-text-stroke-width: .2px;
     -moz-osx-font-smoothing: grayscale;
+    vertical-align: middle;
 }
 body{
 	font-size: 14px;
@@ -344,4 +345,69 @@ h2.title{
 .btn-yellow{
     border-color: $byellow;
     color: $byellow;
+}
+.input{
+    height: 31px;
+    line-height: 31px;
+    padding-left: 5px;
+    width: 197px;
+    border: 1px solid #f1f1f1;
+    color: #666;
+}
+.input-list{
+    margin-top: 35px;
+    p{
+        margin-bottom: 22px;
+        color: $cgray;
+    }
+}
+.btn-save{
+    width: 100px;
+    height: 40px;
+    line-height: 40px;
+    text-align: center;
+    background: #ff6e1f;
+    color: #fff;
+    border-radius: 4px;
+    font-size: 16px;
+    border: 0 none;
+}
+.color-blue{
+    color: #4f78bb;
+    display: block;
+    margin: 15px 0 8px;
+}
+.new-letter{
+    letter-spacing: 3px;
+}
+.icon-checkbox{
+    cursor: pointer;
+    &:after{
+        content: '\e64d';
+    }
+}
+.icon-checkbox-selected{
+    cursor: pointer;
+    &:after{
+        content: '\e64e';
+        color: $byellow;
+    }
+}
+.icon-eye{
+    cursor: pointer;
+    &:after{
+        content: '\e63a';
+    }
+}
+.icon-eye-open{
+    cursor: pointer;
+    &:after{
+        content: '\e620';
+    }
+}
+.close-cover{
+    position: absolute;
+    right: 46px;
+    top: 32px;
+    color: $cgray;
 }
