--- a/sass/pages/orderList.scss
+++ b/sass/pages/orderList.scss
@@ -63,6 +63,7 @@
                 margin-left: 10px;
                 margin-right: 8px;
                 border: 1px solid #f1f1f1;
+                box-sizing: border-box;
             }
             .time-all{
                 display: inline-block;
@@ -88,9 +89,6 @@
                         margin-left: 42px;
                         margin-right: 12px;
                         vertical-align: middle;
-                    }
-                    .icon-selected{
-                        color: $byellow;
                     }
             }
             .search-btn{
