--- a/sass/pages/personalCenter.scss
+++ b/sass/pages/personalCenter.scss
@@ -104,3 +104,79 @@
          right: 48px;
      }
  }
+ .user-cover-layer{
+     .layer-main{
+        width: 1000px;
+        .title{
+            text-align: left;
+            span{
+                font-size: $font-size-m;
+                color: #2f2f2f;
+            }
+        }
+        .input-list{
+            margin-top: 35px;
+            p{
+                margin-bottom: 22px;
+                color: $cgray;
+            }
+        }
+        .select-list{
+            margin-left: -3px;
+            width: 230px;
+        }
+        .btn-save{
+                margin-top: 210px;
+        }
+        .go-back{
+            margin: 20px 0 100px;
+        }
+        .icon-eye, .icon-eye-open{
+            padding-left: 18px;
+        }
+     }
+     .add-acount-input .input-list, .edit-acount-input .input-list{
+         margin-left: 220px;
+         text-align: left;
+     }
+ }
+//安全中心
+.security-list{
+    margin: 20px 10px 465px;
+    .item{
+        padding: 36px 0 30px;
+        border-bottom: 1px solid #f1f1f1;
+        color: $gray-light;
+        .icon-warn{
+            margin-left: 46px;
+            margin-right: 28px;
+            color: #ffd409;
+            font-size: 54px;
+        }
+        .title{
+            font-size: 19px;
+            margin-right: 38px;
+        }
+        .intro{
+            width: 496px;
+            margin-right: 28px;
+            .txt{
+                font-size: 18px;
+                color: #3f3f3f;
+                margin-bottom: 10px;
+                display: inline-block;
+            }
+        }
+    }
+    .btn-edit{
+        width: 100px;
+        height: 30px;
+        line-height: 30px;
+        text-align: center;
+        background: #ff4e1f;
+        color: #fff;
+        font-size: 16px;
+        border: 0;
+        margin-top: 10px;
+    }
+}
