--- a/sass/modules/common.scss
+++ b/sass/modules/common.scss
@@ -377,6 +377,9 @@ h2.title{
     display: block;
     margin: 15px 0 8px;
 }
+.color-yellow{
+    color: #ff8400;
+}
 .new-letter{
     letter-spacing: 3px;
 }
