--- a/sass/pages/orderList.scss
+++ b/sass/pages/orderList.scss
@@ -33,6 +33,7 @@
         width: 106px;
         text-align: center;
         line-height: 36px;
+        height: 38px;
         border: 1px solid #f1f1f1;
         background: #f5f5f5;
     }
@@ -64,6 +65,9 @@
                 margin-right: 8px;
                 border: 1px solid #f1f1f1;
                 box-sizing: border-box;
+            }
+            .select-arrow{
+                margin-left: 6px;
             }
             .time-all{
                 display: inline-block;
