供应商登录页面

--- a/sass/pages/supplierLogin.scss
+++ b/sass/pages/supplierLogin.scss
@@ -7,3 +7,12 @@
 .login-bg {
     background: url(../images/supplier-login-bg.jpg) 32px 45px no-repeat;
 }
+
+.input-list {
+    .txt-warn {
+        color: #f02525;
+        margin-left: 120px;
+        margin-bottom: 10px;
+        font-size: 14px;
+    }
+}
