--- a/sass/modules/usercenter/myShop.scss
+++ b/sass/modules/usercenter/myShop.scss
@@ -96,6 +96,8 @@
     .select-list{
         width: 158px;
         margin-left: -3px;
+        padding-right: 36px;
+        background: url(../images/down-arrow.png) no-repeat scroll 92% center #fff;
     }
     .btn{
         width: 100px;
