--- a/sass/pages/personalCenter.scss
+++ b/sass/pages/personalCenter.scss
@@ -118,6 +118,8 @@
         .select-list{
             margin-left: -3px;
             width: 230px;
+            padding-right: 36px;
+            background: url(../images/down-arrow.png) no-repeat scroll 92% center #fff;
         }
         .go-back{
             margin: 20px 0 100px;
