--- a/sass/pages/login.scss
+++ b/sass/pages/login.scss
@@ -94,3 +94,35 @@
         }
     }
 }
+.select-shops{
+    .shop-item{
+        display: block;
+        line-height: 50px;
+        overflow: hidden;
+        margin-bottom: 20px;
+        &:hover{
+            span{
+                color: #ff7e00;
+                text-decoration: underline;
+            }
+        }
+        img{
+            width: 50px;
+            height: 50px;
+            vertical-align: middle;
+            border-radius: 50%;
+            float: left;
+            border: solid 2px #f1f1f1;
+        }
+        span{
+            float: left;
+            width: 158px;
+            overflow: hidden;
+            text-overflow: ellipsis;
+            white-space: nowrap;
+            margin: 0 0 0 10px;
+            font-size: 18px;
+            color: $cgray;
+        }
+    }
+}
